--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run FastAPI and then cancel
         run: |
-          timeout 5s poetry run perplexity || true
+          timeout 5s poetry run vector || true
 
   dependabot:
     name: "Dependabot"
